must ask a question for eightball

--- a/src/main/resources/lang/en.json
+++ b/src/main/resources/lang/en.json
@@ -1,5 +1,6 @@
 {
     "8ball": {
+        "noQuestion": "You must ask a question",
         "answer": {
             "1": "It is certain.",
             "2": "It is decidedly so.",
