make variables use language

--- a/src/main/resources/lang/en.json
+++ b/src/main/resources/lang/en.json
@@ -87,6 +87,11 @@
             "1": "%s second"
         }
     },
+    "variables": {
+    "query": {
+        "title": "Variable Query:"
+        }
+    },
     "weather": {
         "error_title": "An error has occured!",
         "error": "Error: ",
