Fix summery -> summary

--- a/src/main/resources/lang/en.json
+++ b/src/main/resources/lang/en.json
@@ -98,8 +98,8 @@
         "error_location": "Error getting location data for %s",
         "error_weather": "Error getting weather for %s",
         "title": "Weather for: %s",
-        "summery": {
-            "label": "Summery:",
+        "summary": {
+            "label": "Summary:",
             "value": ""
         },
         "precipitation": {
